more z-index issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -5570,7 +5570,7 @@ a:hover {
   right: -7px;
   background: url("../images/home-hero-info.png") no-repeat top right;
   height: 111px;
-  width: 100%;
+  width: 600px;
   z-index: 9995; }
 
 #superfish-4 {
